<resources>
    <string name="app_name">AntaraNews.com</string>
    <string name="terapi_tradisional_tiongkok_ini_bantu_pulihkan_pasien_serangan_jantung">Terapi tradisional Tiongkok
        ini bantu pulihkan pasien serangan jantung
    </string>
    <string name="_2023_11_10_03_18_12">2023-11-10 03:18:12</string>
    <string name="published_date">Published date</string>
    <string name="berita_terkini_antara_news">Berita Terkini - ANTARA News</string>
    <string name="berita_terkini_dan_terpercaya_indonesia">Berita Terkini dan Terpercaya Indonesia</string>
    <string name="sebuah_penelitian_menemukan_bahwa_pengobatan_tradisional_tiongkok_quot_tongxinluo_quot_dapat_memberikan_manfaat_ketika_digunakan_sebagai_terapi_tambahan_bagi_pasien_yang_baru_pulih_dari_serangan_jantung_medical_daily">
        Sebuah penelitian menemukan bahwa pengobatan tradisional Tiongkok \"Tongxinluo\" dapat memberikan manfaat ketika
        digunakan sebagai terapi tambahan bagi pasien yang baru pulih dari serangan jantung. Medical Daily
        sebuah_penelitian_menemukan_bahwa_pengobatan_tradisional_tiongkok_quot_tongxinluo_quot_dapat_memberikan_manfaat_ketika_digunakan_sebagai_terapi_tambahan_bagi_pasien_yang_baru_pulih_dari_serangan_jantung_medical_daily">
        Sebuah penelitian menemukan bahwa pengobatan tradisional Tiongkok \"Tongxinluo\" dapat memberikan manfaat ketika
        digunakan sebagai terapi tambahan bagi pasien yang baru pulih dari serangan jantung. Medical Daily
    </string>
    <string name="selengkapnya_link_https_www_antaranews_com_berita_3816546_terapi_tradisional_tiongkok_ini_bantu_pulihkan_pasien_serangan_jantung">
        Selengkapnya...
        https://www.antaranews.com/berita/3816546/terapi-tradisional-tiongkok-ini-bantu-pulihkan-pasien-serangan-jantung
    </string>
    <string name="about_me">about me</string>
    <string name="heydie_zuliansyah">Heydie Zuliansyah</string>
    <string name="helsarayta_gmail_com">helsarayta@gmail.com</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="linkedin">Linkedin</string>
    <string name="berita_terkini">Berita Terkini</string>
    <string name="berita_hari_ini">Berita Hari Ini</string>
</resources>
