<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".DetailActivity">

   <include layout="@layout/nav_title"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#000000" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >
            <TextView
                    android:id="@+id/detail_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/_2023_11_10_03_18_12"
            />
            <ImageView
                    android:id="@+id/detail_img"
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:src="@drawable/photo"
            />

            <TextView
                    android:id="@+id/detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terapi_tradisional_tiongkok_ini_bantu_pulihkan_pasien_serangan_jantung"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
            />

            <TextView
                    android:id="@+id/detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sebuah_penelitian_menemukan_bahwa_pengobatan_tradisional_tiongkok_quot_tongxinluo_quot_dapat_memberikan_manfaat_ketika_digunakan_sebagai_terapi_tambahan_bagi_pasien_yang_baru_pulih_dari_serangan_jantung_medical_daily"
                    android:textSize="18sp"
                    android:layout_margin="8dp"
            />

            <TextView
                    android:id="@+id/detail_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selengkapnya_link_https_www_antaranews_com_berita_3816546_terapi_tradisional_tiongkok_ini_bantu_pulihkan_pasien_serangan_jantung"
                    android:autoLink="web"
                    android:layout_margin="8dp"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:layout_marginBottom="8dp"
            />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
